--- a/hw2/templates/showEntries.html
+++ b/hw2/templates/showEntries.html
@@ -1,11 +1,16 @@
 {% extends "layout.html" %}
 {% block body %}
     {% if session.logged_in %}
-          <form action="{{ url_for('add_entry') }}" method=post class=add-entry>
+          <form action="{{ url_for('addEntry') }}" method=post class=add-entry>
               <dl>
                   <dt>Name:
                   <dd><input type=text size=30 name=name>
                   <dd><input type=submit value=Share>
+              </dl>
+          </form>
+          <form action="{{ url_for('clearEntries') }}" method=post class=clear-entries>
+              <dl>
+                  <dd><input type=submit value=Clear>
               </dl>
           </form>
     {% endif %}
@@ -13,7 +18,7 @@
     {% for entry in entries %}
          <li><h2>{{ entry.name}}</h2>
     {% else %}
-         <li><em>Enter your name to 
+        <li><em>Enter your name to add you name to the list! 
     {% endfor %}
      </ul>
 {% endblock %}
