build script and unit tests.

--- a/hw2/templates/showEntries.html
+++ b/hw2/templates/showEntries.html
@@ -18,7 +18,7 @@
     {% for entry in entries %}
          <li><h2>{{ entry.name}}</h2>
     {% else %}
-        <li><em>Enter your name to add you name to the list! 
+        <li><em>Enter your name to add it to the list! 
     {% endfor %}
      </ul>
 {% endblock %}
